force-app/main/default/objects/ABHI_Welcome_Call__mdt/ABHI_Welcome_Call__mdt.object-meta.xml
<CustomObject>
    <description>Used for storing serviceId for Welcome call</description>
    <label>Welcome Call</label>
    <pluralLabel>Welcome Calls</pluralLabel>
</CustomObject>