force-app/main/default/objects/ABHI_Welcome_Call__mdt/fields/Chronic_care__c.field-meta.xml
<CustomField>
    <fullName>Chronic_care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chronic care (PED day 1)</label>
    <type>Checkbox</type>
</CustomField>