force-app/main/default/objects/ABHI_Welcome_Call__mdt/fields/CMP_OPD__c.field-meta.xml
<CustomField>
    <fullName>CMP_OPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMP (OPD)</label>
    <type>Checkbox</type>
</CustomField>