force-app/main/default/objects/ABHI_Welcome_Call__mdt/fields/Ignore_All_Fields__c.field-meta.xml
<CustomField>
    <fullName>Ignore_All_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore All Fields</label>
    <type>Checkbox</type>
</CustomField>