force-app/main/default/objects/ABHI_Welcome_Call__mdt/fields/IsChronicFlag__c.field-meta.xml
<CustomField>
    <fullName>IsChronicFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Chronic Flag</label>
    <type>Checkbox</type>
</CustomField>